--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Node.js API Gateway",
   "main": "index.js",
   "scripts": {
+    "dev":"nodemon gateway.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,5 +12,9 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.1.0"
+  },
+  "dependencies": {
+    "axios": "^1.6.8",
+    "express": "^4.19.2"
   }
 }
