--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "Node.js API Gateway",
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon gateway.js",
+    "dev": "nodemon gateway.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "express": "^4.19.2",
     "nodemon": "^3.1.0"
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "express": "^4.19.2"
+    "init": "^0.1.2"
   }
 }
