--- a/fakeapi/package.json
+++ b/fakeapi/package.json
@@ -1,9 +1,9 @@
 {
   "name": "fakeapi",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js", 
   "scripts": {
-    "dev":"nodemon server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
