--- a/fakeapi/package.json
+++ b/fakeapi/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fakeapi",
   "version": "1.0.0",
-  "main": "server.js", 
+  "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.6.8",
     "express": "^4.19.2",
     "nodemon": "^3.1.0"
   }
