--- a/bdd/docker-compose.yaml
+++ b/bdd/docker-compose.yaml
@@ -22,3 +22,15 @@ services:
       - "8080:80"
     depends_on:
       - mysql
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - phpmyadmin
+
+volumes:
+  db-data:
