--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.js API Gateway",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon gateway.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "helmet": "^7.1.0",
-    "init": "^0.1.2"
+    "init": "^0.1.2",
+    "kafkajs": "^2.2.4"
   }
 }
