--- a/bdd/docker-compose.yaml
+++ b/bdd/docker-compose.yaml
@@ -1,36 +1,26 @@
 version: '3.1'
 
 services:
+
   mysql:
-    image: mysql:latest
+    image: mysql:8.4.0
+    restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_ROOT_PASSWORD: example
     ports:
-      - "3307:3306"
+      - "3306:3306"
+    volumes:
+      - mysql-data:/var/lib/mysql
 
   phpmyadmin:
-    image: phpmyadmin/phpmyadmin
+    image: phpmyadmin:latest
+    restart: always
+    ports:
+      - "8080:80"
     environment:
       PMA_HOST: mysql
       PMA_PORT: 3306
-      PMA_USER: ${PMA_USER}
-      PMA_PASSWORD: ${PMA_PASSWORD}
-    ports:
-      - "8080:80"
-    depends_on:
-      - mysql
-
-  nginx:
-    image: nginx:alpine
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-    depends_on:
-      - phpmyadmin
+      PMA_ARBITRARY: 1
 
 volumes:
-  db-data:
+  mysql-data:
