--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@nestjs/testing": "^10.3.9",
+    "@types/jest": "^29.5.12",
+    "@types/mocha": "^10.0.6",
     "express": "^4.19.2",
+    "jes": "^0.6.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "prisma": "^5.15.0"
   },
