--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "jes": "^0.6.1",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
-    "prisma": "^5.15.0"
+    "prisma": "^5.15.0",
+    "ts-jest": "^29.1.4"
   },
   "dependencies": {
     "@nestjs/common": "^10.3.8",
