--- a/authentication/Signup/package.json
+++ b/authentication/Signup/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:cart": "jest src/Cart/cart.service.spec.ts",
+    "test:user-attachment": "jest src/UserAttachment/user-attachment.service.spec.ts",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
