--- a/bdd/docker-compose.yaml
+++ b/bdd/docker-compose.yaml
@@ -1,26 +1,25 @@
-version: '3.1'
+version: "3.8"
 
 services:
-
-  mysql:
-    image: mysql:8.4.0
-    restart: always
+  postgres:
+    image: postgres:12
     environment:
-      MYSQL_ROOT_PASSWORD: example
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
     ports:
-      - "3306:3306"
+      - "5432:5432"
     volumes:
-      - mysql-data:/var/lib/mysql
+      - data:/var/lib/postgresql/data
 
-  phpmyadmin:
-    image: phpmyadmin:latest
-    restart: always
-    ports:
-      - "8080:80"
+  pg-admin:
+    image: dpage/pgadmin4:6
     environment:
-      PMA_HOST: mysql
-      PMA_PORT: 3306
-      PMA_ARBITRARY: 1
+      - PGADMIN_DEFAULT_EMAIL=admin@email.com
+      - PGADMIN_DEFAULT_PASSWORD=admin
+      - PGADMIN_LISTEN_PORT=5050
+
+    ports:
+      - "5050:5050"
 
 volumes:
-  mysql-data:
+  data:
